--- a/aquariusswaptest14/index.html
+++ b/aquariusswaptest14/index.html
@@ -348,7 +348,7 @@
 
     // AQUA / AQUAm25
     const AQUA_CODE   = "AQUA";
-    const AQUA_ISSUER = "GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAVY4M67AQUA".replace("Y4M67AQUA","Y4M67AQUA"); // keep literal
+    const AQUA_ISSUER = "GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA";
     const AQUAm25_CODE   = "AQUAm25";
     const AQUAm25_ISSUER = "GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC";
     const TRACKER_KEY    = "GDGEWZMIJ2K6AEYYV2L4FYN27YJP5OVZSWCJIM662D5OS7EL6T6WBGBP";
