--- a/aquariusswaptest14.6/index.html
+++ b/aquariusswaptest14.6/index.html
@@ -166,11 +166,9 @@
         </div>
       </div>
 
-      <!-- Swap (Buy AQUAm25) -->
-      <div class="section box card-swap" id="swapBox">
-        <div class="swap-header">
-          <span class="pill">Network: <span class="mono">Mainnet</span></span>
-        </div>
+<!-- Swap (Buy AQUAm25) -->
+<div class="section box card-swap" id="swapBox">
+  <h2>Swap</h2>
 
         <!-- SELL -->
         <div class="slab" style="position:relative">
